--- a/settings.json
+++ b/settings.json
@@ -1,21 +1,17 @@
 {
-	"public": {
-		"webservices": {
-			"elasticsearch":{
-				"status": "active",
-				"url":"http://127.0.0.1:9200"
-			}
-		}
-	},
-	"records":{
-		"office_converter_path":"D:\\OfficeConverter\\OfficeConverter.exe",
-
-		"sync_interval":0,
-
-		"sync_limit_num":10,
-
-		"es_search_index": "steedos",
-
-		"cfs_file_server": "http://192.1.1.141:315"
+  "records_qhd": {
+    "spaces": ["Af8eM6mAHo7wMDqD3"],
+    "recurrenceRule": "*/1 * * * *",
+    "to_archive": {
+      "contract_instances": {
+        "flows": [
+          "49cd342e-76a3-41ed-bbd6-e0921be9f004",
+          "2d6055de-53d2-4d65-8e56-0df9862b3226",
+          "25d7f36f-747d-4031-b767-e3023783846f",
+          "6a520bf56a83eac20a604bde",
+          "f0a3f03c7a64c6cc2cb2d40b"
+        ]
+      }
+    }
   }
 }
